--- a/website/templates/clube/index.html
+++ b/website/templates/clube/index.html
@@ -9,25 +9,23 @@
   
 <div class="container ">
   <div class="row ">
-    {% for p in links %}
+    {% for produto in produtos %}
     <div class="col-6">
       <div class="card mx-5 shadow" style="border-radius: 10px; border:none; ">
         <div class="card-body">
-          <h5 class="card-title font-weight-bold">{{p.produto.name}}</h5>
+          <h5 class="card-title font-weight-bold">{{produto.name}}</h5>
           <p class="card-text text-muted"><svg class="bi bi-check" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"/>
-          </svg>{{p.produto.description}}</p>
+          </svg>{{produto.description}}</p>
           
-          {% for plan in p.produto.plan_set.all %}
-            <h5 >{{ plan.human_readable_price }}</h5>
-            <div class="text-right">
-                {% if usuario %}
-                    <a href="{{ p.link }}?prefilled_email={{ usuario.email }}" target="_blank" rel="noopener noreferrer"><button>Comprar</button></a>
-                {% else %}
-                    <a href="{% url 'usuario:login' %}"><button>Comprar</button></a>
-                {% endif %}
-            </div>
-          {% endfor %}
+          <h5 >{{ produto.valor }}</h5>
+          <div class="text-right">
+              {% if usuario %}
+                  <a href="{{ produto.link }}?prefilled_email={{ usuario.email }}" target="_blank" rel="noopener noreferrer"><button>Comprar</button></a>
+              {% else %}
+                  <a href="{% url 'usuario:login' %}"><button>Comprar</button></a>
+              {% endif %}
+          </div>
         </div>
       </div>
       
