--- a/website/templates/usuario/login.html
+++ b/website/templates/usuario/login.html
@@ -5,8 +5,11 @@
   <br><br>
   <form method="POST">
     {% csrf_token %}
+    <input type="text" name="nome" placeholder="Nome">
     <input type="email" name="user" id="">
     <input type="password" name="password" id="">
-    <button type="submit">Entrar</button>
+    <button type="submit" name='entrar' value='entrar'>Entrar</button>
+    <button type="submit" name='cadastrar' value='cadastrar'>Cadastrar</button>
+    <a href="">Esqueceu a senha</a>
   </form>
 {% endblock %}
