--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,5 +1,9 @@
-{% extends "partials/home.html" %}
+{% extends "partials/_base.html" %}
+
+{% block titulo %}Home{% endblock titulo %}
 
 {% block conteudo %}
-  <h1>Tela Home</h1>
+  <main>
+    {% include "partials/_container-titulo-pagina.html" with titulo="Tela Inicial" %}
+  </main>
 {% endblock %}
