--- a/website/templates/clube/perfil.html
+++ b/website/templates/clube/perfil.html
@@ -1,13 +1,17 @@
-{% extends "partials/home.html" %}
+{% extends "partials/_base.html" %}
+
+{% block titulo %}Home{% endblock titulo %}
 
 {% block conteudo %}
-  <h1>Tela Clube Perfil</h1>
+    <main>
+    {% include "partials/_container-titulo-pagina.html" with titulo="Meu Clube" %}
+    </main>
 
-  <br>
-  <div class="container text-center">
-    <br><br><br><br>
-    <h3>Sua assinatura esta ativa!</h3>
-    <br><br>
-    <a class="btn btn-danger text-light" href="{% url 'clube:cancelar-assinatura' %}">Cancelar Assinatura</a>
-  </div>
+    <br>
+    <div class="container text-center">
+        <br><br><br><br>
+        <h3>Sua assinatura esta ativa!</h3>
+        <br><br>
+        <a class="btn btn-danger text-light" href="{% url 'clube:cancelar-assinatura' %}">Cancelar Assinatura</a>
+    </div>
 {% endblock %}
