--- a/website/templates/usuario/cadastro.html
+++ b/website/templates/usuario/cadastro.html
@@ -13,17 +13,17 @@
 
       <div class="formulario-grupo">
         <label for="campo-nome">Nome</label>
-        <input id="campo-nome" type="text" name="nome" required>
+        <input id="campo-nome" type="text" name="nome" maxlength="150" required>
       </div>
 
       <div class="formulario-grupo">
         <label for="campo-email">E-mail</label>
-        <input id="campo-email" type="email" name="user" required>
+        <input id="campo-email" type="email" name="user" maxlength="50" minlength="10" required>
       </div>
 
       <div class="formulario-grupo">
         <label for="campo-email">Senha</label>
-        <input id="campo-email" type="password" name="password" required>
+        <input id="campo-email" type="password" name="password" maxlength="15" minlength="8" required>
       </div>
       
       <div class="container-botoes">
