--- a/website/templates/usuario/login.html
+++ b/website/templates/usuario/login.html
@@ -13,12 +13,12 @@
 
       <div class="formulario-grupo">
         <label for="campo-email">E-mail</label>
-        <input id="campo-email" type="email" name="user" required>
+        <input id="campo-email" type="email" name="user" maxlength="50" minlength="10" required>
       </div>
 
       <div class="formulario-grupo">
         <label for="campo-senha">Senha</label>
-        <input id="campo-senha" type="password" name="password" required>
+        <input id="campo-senha" type="password" name="password" maxlength="15" minlength="8" required>
       </div>
       
       <div class="container-botoes">
