--- a/website/templates/usuario/perfil.html
+++ b/website/templates/usuario/perfil.html
@@ -11,6 +11,10 @@
     <h2 class="texto-branco">{{ usuario.nome }}</h2>
     <br>
     <br>
+    <a href="{% url 'usuario:associar-colaborador' %}" class="texto-branco">Associar colaborador</a>
+    <br>
+    <a href="{% url 'usuario:logout' %}" class="texto-branco">Associar novo ADM</a>
+    <br>
     <a href="{% url 'usuario:logout' %}" class="texto-branco">Sair</a>
   </main>
 {% endblock %}
