Associar serviço ao colaborador

--- a/website/templates/usuario/perfil.html
+++ b/website/templates/usuario/perfil.html
@@ -13,7 +13,7 @@
     <br>
     <a href="{% url 'usuario:associar-colaborador' %}" class="texto-branco">Associar colaborador</a>
     <br>
-    <a href="{% url 'usuario:logout' %}" class="texto-branco">Associar novo ADM</a>
+    <a href="{% url 'usuario:servico-colaborador' %}" class="texto-branco">Associar serviço/colaborador</a>
     <br>
     <a href="{% url 'usuario:logout' %}" class="texto-branco">Sair</a>
   </main>
