--- a/website/templates/usuario/perfil.html
+++ b/website/templates/usuario/perfil.html
@@ -15,6 +15,8 @@
     <br>
     <a href="{% url 'usuario:servico-colaborador' %}" class="texto-branco">Associar serviço/colaborador</a>
     <br>
+    <a href="{% url 'usuario:associar-adm' %}" class="texto-branco">Associar adm</a>
+    <br>
     <a href="{% url 'usuario:logout' %}" class="texto-branco">Sair</a>
   </main>
 {% endblock %}
