Listar usuários + FIltros

--- a/website/templates/clube/perfil.html
+++ b/website/templates/clube/perfil.html
@@ -10,8 +10,8 @@
     <br>
     <div class="container text-center">
         <br><br><br><br>
-        <h3>Sua assinatura esta ativa!</h3>
+        <h3 class="texto-branco">Sua assinatura esta ativa!</h3>
         <br><br>
-        <a class="btn btn-danger text-light" href="{% url 'clube:cancelar-assinatura' %}">Cancelar Assinatura</a>
+        <a class="texto-branco" href="{% url 'clube:cancelar-assinatura' %}">Cancelar Assinatura</a>
     </div>
 {% endblock %}
