--- a/website/templates/usuario/perfil.html
+++ b/website/templates/usuario/perfil.html
@@ -17,6 +17,8 @@
     <br>
     <a href="{% url 'usuario:associar-adm' %}" class="texto-branco">Associar adm</a>
     <br>
+    <a href="{% url 'usuario:usuarios' %}" class="texto-branco">Lista usuarios</a>
+    <br>
     <a href="{% url 'usuario:logout' %}" class="texto-branco">Sair</a>
   </main>
 {% endblock %}
