--- a/website/templates/usuario/cadastro.html
+++ b/website/templates/usuario/cadastro.html
@@ -18,7 +18,7 @@
 
             <div class="formulario-grupo">
                 <label for="campo-email">E-mail</label>
-                <input id="campo-email" type="email" name="user" maxlength="50" minlength="10" required>
+                <input id="campo-email" type="email" name="email" maxlength="50" minlength="10" required>
             </div>
 
             <div class="formulario-grupo">
