Atualizando actions para nova tabela de usuário

--- a/website/templates/partials/_base.html
+++ b/website/templates/partials/_base.html
@@ -32,6 +32,7 @@
     </head>
 
     <body>
+        <h1 class="texto-branco">{{ usuario }}</h1>
         {% block conteudo %}{% endblock %}
 
         {% include "partials/_navbar.html" %}
