--- a/website/templates/usuario/usuarios.html
+++ b/website/templates/usuario/usuarios.html
@@ -21,7 +21,7 @@
 
         {% for usuario in usuarios %}
             <br>
-            <a href="#" class="texto-branco">{{ usuario }}</a>
+            <a href="#" class="texto-branco">{{ usuario.first_name }}</a>
         {% endfor %}
 
     </main>
