--- a/website/templates/clube/index.html
+++ b/website/templates/clube/index.html
@@ -31,47 +31,51 @@
 
         {% endfor %}
     </div>
-    <br><br><hr><br><br>
-    <div>
-        <div class="row">
-        <div class="col-12">
-            <div class="card mx-5 shadow rounded" style="border-radius:50px;border:none">
-            <div class="card-body texto-branco">
-                <h5  class="texto-branco">Checkout</h5>
-                <p  class="texto-branco">Enter card details.  Your subscription will start immediately</p>
-                <div class="row">
-                <div class="col-6 text-muted">
-                    <p class="texto-branco">Plan:</p>
-                    <p class="texto-branco">Total:</p>
-                </div>
-                <div class="col-6 text-right">
-                    <p id="plan"></p>
-                    <p id="price"></p>
-                    <p hidden id="priceId"></p>
-                </div>
-
-                </div>
-                <br>
-                <form id="subscription-form" >
-                <div id="card-element" class="MyCardElement">
-                    <!-- Elements will create input elements here -->
-                </div>
-                
-                <!-- We'll put the error messages in this element -->
-                <div id="card-errors" role="alert"></div>
-                <button id="submit" type="submit">
-                    <div class="spinner-border  spinner-border-sm text-light hidden" id="spinner" role="status">
-                    <span class="texto-branco" class="sr-only">Loading...</span>
+    
+    {% if usuario %}
+        <br><br><hr><br><br>
+        <div>
+            <div class="row">
+            <div class="col-12">
+                <div class="card mx-5 shadow rounded" style="border-radius:50px;border:none">
+                <div class="card-body texto-branco">
+                    <h5  class="texto-branco">Checkout</h5>
+                    <p  class="texto-branco">Enter card details.  Your subscription will start immediately</p>
+                    <div class="row">
+                    <div class="col-6 text-muted">
+                        <p class="texto-branco">Plan:</p>
+                        <p class="texto-branco">Total:</p>
                     </div>
-                    <span class="texto-branco" id="button-text">Subscribe</span>
-                </button>
-                </form>
-            </div>
-            </div>
+                    <div class="col-6 text-right">
+                        <p id="plan"></p>
+                        <p id="price"></p>
+                        <p hidden id="priceId"></p>
+                    </div>
 
+                    </div>
+                    <br>
+                    <form id="subscription-form" >
+                    <div id="card-element" class="MyCardElement">
+                        <!-- Elements will create input elements here -->
+                    </div>
+                    
+                    <!-- We'll put the error messages in this element -->
+                    <div id="card-errors" role="alert"></div>
+                    <button id="submit" type="submit">
+                        <div class="spinner-border  spinner-border-sm text-light hidden" id="spinner" role="status">
+                        <span class="texto-branco" class="sr-only">Loading...</span>
+                        </div>
+                        <span class="texto-branco" id="button-text">Subscribe</span>
+                    </button>
+                    </form>
+                </div>
+                </div>
+
+            </div>
+            </div>
         </div>
-        </div>
-    </div>
+    
+    {% endif %}
 
     </div>
 
