Fazer CRUD de Serviços (Somente usuário ADM)

--- a/website/templates/usuario/menu-perfil.html
+++ b/website/templates/usuario/menu-perfil.html
@@ -19,6 +19,8 @@
     <br>
     <a href="{% url 'usuario:usuarios' %}" class="texto-branco">Lista usuarios</a>
     <br>
+    <a href="{% url 'agendamento:cadastrar-servico' %}" class="texto-branco">Cadastrar servico</a>
+    <br>
     <a href="{% url 'usuario:logout' %}" class="texto-branco">Sair</a>
   </main>
 {% endblock %}
