--- a/website/templates/usuario/menu-perfil.html
+++ b/website/templates/usuario/menu-perfil.html
@@ -19,7 +19,7 @@
     <br>
     <a href="{% url 'usuario:usuarios' %}" class="texto-branco">Lista usuarios</a>
     <br>
-    <a href="{% url 'agendamento:cadastrar-servico' %}" class="texto-branco">Cadastrar servico</a>
+    <a href="{% url 'agendamento:listar-servicos' %}" class="texto-branco">Listar servicos</a>
     <br>
     <a href="{% url 'usuario:logout' %}" class="texto-branco">Sair</a>
   </main>
