--- a/website/templates/usuario/menu-perfil.html
+++ b/website/templates/usuario/menu-perfil.html
@@ -11,16 +11,10 @@
     <h2 class="texto-branco">{{ usuario.nome }}</h2>
     <br>
     <br>
-    <a href="{% url 'usuario:associar-colaborador' %}" class="texto-branco">Associar colaborador</a>
+    <p><a href="{% url 'usuario:usuarios' %}" class="texto-branco">Lista usuarios</a></p>
     <br>
-    <a href="{% url 'usuario:servico-colaborador' %}" class="texto-branco">Associar serviço/colaborador</a>
+    <p><a href="{% url 'agendamento:listar-servicos' %}" class="texto-branco">Listar servicos</a></p>
     <br>
-    <a href="{% url 'usuario:associar-adm' %}" class="texto-branco">Associar adm</a>
-    <br>
-    <a href="{% url 'usuario:usuarios' %}" class="texto-branco">Lista usuarios</a>
-    <br>
-    <a href="{% url 'agendamento:listar-servicos' %}" class="texto-branco">Listar servicos</a>
-    <br>
-    <a href="{% url 'usuario:logout' %}" class="texto-branco">Sair</a>
+    <p><a href="{% url 'usuario:logout' %}" class="texto-branco">Sair</a></p>
   </main>
 {% endblock %}
