--- a/website/templates/usuario/perfil.html
+++ b/website/templates/usuario/perfil.html
@@ -11,21 +11,23 @@
         <h2 class="texto-branco">Perfil de {{ usuario.first_name }}</h2>
         <br>
 
-        <form method="POST">
-            {% csrf_token %}
-
-            {% if colaborador %}
+        {% if adm %}
+            <form method="POST">
+                {% csrf_token %}
+                
+                {% if not colaborador %}
                 <div class="container-botoes">
                     <button class="botao botao--azul" type="submit" name="associar_colaborador" value="associar_colaborador">Associar colaborador</button>
                 </div>
-            {% endif %}
-            
-            {% if adm %}
+                {% endif %}
+                
+                {% if not adm %}
                 <div class="container-botoes">
                     <button class="botao botao--azul" type="submit" name="associar_adm" value="associar_adm">Associar adm</button>
                 </div>
-            {% endif %}
-        </form>
+                {% endif %}
+            </form>
+        {% endif %}
 
     </main>
 {% endblock %}
