--- a/website/templates/usuario/resetar-senha/email-texto.html
+++ b/website/templates/usuario/resetar-senha/email-texto.html
@@ -2,7 +2,9 @@
   To initiate the password reset process for your {{ user.email }} Django Registration/Login App Account,
   click the link below:
 
-  {{ protocol }}://{{ domain }}{% url 'usuario:password_reset_confirm' uidb64=uid token=token %}
+  {{ domain }}
+
+  {{ protocol }}://localhost:8000{% url 'usuario:password_reset_confirm' uidb64=uid token=token %}
 
   If clicking the link above doesn't work, please copy and paste the URL in a new browser
   window instead.
