--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,6 +4,6 @@
 
 {% block conteudo %}
   <main>
-    {% include "partials/_container-titulo-pagina.html" with titulo="Tela Inicial" %}
+    {% include "partials/_container-titulo-pagina.html" with titulo="BEM VINDO" %}
   </main>
 {% endblock %}
