--- a/website/static/assets/css/base/base.css
+++ b/website/static/assets/css/base/base.css
@@ -1,14 +1,25 @@
 /* Estilizações gerais */
 
+html, body{
+    height: 100%;
+}
+
 body{
-    background-color: var(--cor-background);
+    background-attachment: fixed;
+    background-image: url('../../img/fundo.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     box-sizing: border-box;
-    padding-bottom: 4rem;
 }
 
 main{
     box-sizing: border-box;
-    padding-block: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-bottom: 6rem;
     padding-inline: 1rem;
+    padding-top: 2rem;
     text-align: center;
 }
