--- a/website/static/assets/css/componentes/surface.css
+++ b/website/static/assets/css/componentes/surface.css
@@ -1,14 +1,12 @@
 /* Estilização das surfaces */
 
 .surface{
-    background-color: var(--cor-surface);
+    background-color: var(--cor-surface-blur);
     border-radius: 1rem;
     box-sizing: border-box;
-    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     padding: 1rem;
     text-align: left;
-}
-
-.surface + *{
-    margin-top: 1rem;
 }
