--- a/website/templates/partials/_base.html
+++ b/website/templates/partials/_base.html
@@ -29,11 +29,17 @@
         <link rel="stylesheet" href="{% static 'assets/css/componentes/container-titulo-pagina.css' %}">
         <link rel="stylesheet" href="{% static 'assets/css/componentes/navbar.css' %}">
         <link rel="stylesheet" href="{% static 'assets/css/componentes/botao.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/componentes/container-texto-linha.css' %}">
+
+        <!-- Estilização de layouts individuais -->
+        {% block css_layout %}{% endblock %}
     </head>
 
     <body>
         {% block conteudo %}{% endblock %}
 
         {% include "partials/_navbar.html" %}
+
+        <script src="{% static 'assets/js/base/formulario.js' %}"></script>
     </body>
 </html>
