--- a/website/templates/usuario/login.html
+++ b/website/templates/usuario/login.html
@@ -25,17 +25,24 @@
       
       <div class="container-botoes">
         <button class="botao botao--azul" type="submit">Entrar</button>
+
+        <a href="{% url 'usuario:password_reset' %}" >
+          <button class="botao botao--secundario" type="button">Esqueci minha senha</button>
+        </a>
       </div>
-      <br><hr><br>
+
+      <div class="container-texto-linha">
+        <div></div>
+        <span>Você também pode</span>
+        <div></div>
+      </div>
+      
       <div class="container-botoes">
-        <a class="texto-verde" href="{% provider_login_url 'google' %}">Login com Google</a>
+        <a href="{% provider_login_url 'google' %}">
+          <button class="botao botao--google" type="button"><i></i>Entrar com Google</button>
+        </a>
       </div>
     </form>
-
-    <div class="formulario-grupo">
-      <a class="texto-medio texto-branco" href="{% url 'usuario:password_reset' %}">Esqueceu a senha</a>
-      <br>
-    </div>
 
     <p class="texto-medio texto-branco">Não possui uma conta? <b class="texto-verde"><a href="{% url 'usuario:cadastro' %}">Cadastre-se</a></b></p>
   </main>
