Tela de recuperação de senha

--- a/website/static/assets/css/componentes/container-titulo-pagina.css
+++ b/website/static/assets/css/componentes/container-titulo-pagina.css
@@ -1,6 +1,7 @@
 /* Estilização do container que carrega o título da página e a logo */
 
 .container-titulo-pagina{
+    align-items: center;
     display: flex;
     justify-content: space-between;
 }
