--- a/website/static/assets/css/base/tipografia.css
+++ b/website/static/assets/css/base/tipografia.css
@@ -11,6 +11,7 @@ body, body *{
     font-size: 1.5rem;
     font-weight: 600;
     text-transform: uppercase ;
+    text-align: left;
 }
 
 .texto-normal{
