Telas de recuperação de senha

--- a/website/static/assets/css/base/tipografia.css
+++ b/website/static/assets/css/base/tipografia.css
@@ -33,3 +33,9 @@ body, body *{
 .texto-verde{
     color: var(--cor-texto-verde)
 }
+
+.link{
+    color: var(--cor-texto-branco);
+    font-weight: 500;
+    text-decoration: underline;
+}
