--- a/website/templates/usuario/resetar-senha/comfirmar-resetar-senha.html
+++ b/website/templates/usuario/resetar-senha/comfirmar-resetar-senha.html
@@ -2,74 +2,28 @@
 
 {% load static %}
 
-{% block titulo %}Resetar senha{% endblock %}
+{% block titulo %}Esqueci minha senha{% endblock %}
 
 {% block conteudo %}
-    <div class="form-content my-3 p-3">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-5">
-                    {% if validlink %}
-                        <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
-                            <div class="card-header justify-content-center">
-                            <h3 class="font-weight-light my-4 text-center">Reset Your Password</h3>
-                            </div>
-                            {% if form.errors %}
-                                <div class="alert alert-danger alert-dismissible" role="alert">
-                                    <div id="form_errors">
-                                        {% for key, value in form.errors.items %}
-                                            <strong>{{ value }}</strong>
-                                        {% endfor %}
-                                    </div>
-                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                            {% endif %}
+    <main>
+        {% include "partials/_container-titulo-pagina.html" with titulo="Nova Senha" %}
 
-                            <div class="card-body">
-                                <form method="POST">
-                                    {% csrf_token %}
-                                    <div class="form-row">
-                                        <div class="col-md-10 offset-md-1">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="id_new_password1">New Password</label>
-                                                <input type="password" name="new_password1" autocomplete="new-password"
-                                                    class="form-control" required id="id_new_password1"
-                                                    placeholder="Enter password"/>
-                                                <span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-row">
-                                        <div class="col-md-10 offset-md-1">
-                                            <div class="form-group">
-                                                <label class="small mb-1" for="id_new_password2">New Password Confirmation</label>
-                                                <input type="password" name="new_password2" autocomplete="new-password"
-                                                    required id="id_new_password2" class="form-control"
-                                                    placeholder="Confirm password"/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-row">
-                                        <div class="col-md-10 offset-md-1">
-                                            <div class="form-group mt-0 mb-1">
-                                                <button type="submit" class="col-md-12 btn btn-dark" id="reset">Reset Password</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    {% else %}
-                    <div class="alert alert-warning">
-                        The password reset link was invalid, possibly because it has already been used.
-                        Please request a new password reset.
-                    </div>
-                    {% endif %}
-                </div>
+        <form method="POST" class="surface">
+            {% csrf_token %}
+
+            <div class="formulario-grupo">
+                <label for="campo-nova-senha">Nova senha</label>
+                <input type="password" name="new_password1" id="campo-nova-senha" minlength="7" maxlength="15" required>
             </div>
-        </div>
-    </div>
+
+            <div class="formulario-grupo">
+                <label for="campo-confirmar-nova-senha">Confirmar nova senha</label>
+                <input type="password" name="new_password2" id="campo-confirmar-nova-senha" minlength="7" maxlength="15" required>
+            </div>
+
+            <div class="container-botoes">
+                <button class="botao botao--azul" type="submit">Resetar Senha</button>
+            </div>
+        </form>
+    </main>
 {% endblock conteudo %}
