--- a/website/templates/usuario/resetar-senha/password_reset_complete.html
+++ b/website/templates/usuario/resetar-senha/password_reset_complete.html
@@ -2,18 +2,14 @@
 
 {% load static %}
 
-{% block titulo %}Recuperação de senha{% endblock %}
+{% block titulo %}Esqueci minha senha{% endblock %}
 
 {% block conteudo %}
-    <div class="container my-3 p-3">
-        <div class="row justify-content-center">
-            <div class="col-lg-5">
-                <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
-                    <div class="texto-medio texto-branco">
-                        Your password has been set. You may go ahead and <a href="{% url 'usuario:login' %}">Login Here</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <main>
+        {% include "partials/_container-titulo-pagina.html" with titulo="Recuperação Completa" %}
+        
+        <p class="texto-branco texto-normal">Sua senha foi atualizada! Utilize a nova senha para entrar.</p>
+
+        <a class="link" href="{% url 'usuario:login' %}">Voltar para o Login</a>
+    </main>
 {% endblock conteudo %}
