Página home, usuário e clube

--- a/website/static/assets/css/base/cores.css
+++ b/website/static/assets/css/base/cores.css
@@ -9,6 +9,7 @@ html{
     --cor-surface-blur: rgba(0, 0, 0, .6);
     
     --cor-texto-branco: #FFFFFF;
+    --cor-texto-cinza: #BFBFBF;
     --cor-texto-verde: #1AA97E;
 
     --cor-icone-branco: #FFFFFF;
