--- a/website/static/assets/css/base/tipografia.css
+++ b/website/static/assets/css/base/tipografia.css
@@ -14,6 +14,14 @@ body, body *{
     text-align: left;
 }
 
+.texto-20{
+    font-size: 1.25rem;
+}
+
+.texto-12{
+    font-size: 0.75rem;
+}
+
 .texto-normal{
     font-weight: 400;
 }
@@ -28,6 +36,10 @@ body, body *{
 
 .texto-branco{
     color: var(--cor-texto-branco);
+}
+
+.texto-cinza{
+    color: var(--cor-texto-cinza)
 }
 
 .texto-verde{
